gcc/testsuite/rust/rustc/ui/parser/issues/diagnostics-parenthesized-type-arguments-issue-120892-1.rs
fn main() {
  foo::( // { help "" "" { target *-*-* } }
// { dg-note "" "" { target *-*-* } .-1 }
    bar(x, y, z),
    bar(x, y, z),
    bar(x, y, z),
    bar(x, y, z),
    bar(x, y, z),
    bar(x, y, z),
    bar(x, y, z),
    baz("test"), // { dg-error "" "" { target *-*-* } }
// { dg-note "" "" { target *-*-* } .-1 }
  )
}

